--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "jszip": "^3.10.1",
     "react": "19.2.3",
     "react-native": "0.84.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-image-crop-picker": "^0.51.1",
     "react-native-image-picker": "^8.2.1",
+    "react-native-keyboard-controller": "^1.20.7",
     "react-native-permissions": "^5.4.4",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.23.0",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
